Details
-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
5.15.2
-
f385b8827a75688b8a2cbd51e8da8a602d7f9567 (qt/qtbase/dev) c5e6a063052075c931f9396b8e4b17541e9cfe35 (qt/qtbase/6.1)
Description
When QFont::NoFontMerging is set then if bold or italics is requested that is not provided by the font then it will end up not synthesizing this. Without NoFontMerging set then it is working fine.